2014-12-31  Julien Bect  <julien.bect@supelec.fr>

	Accept empty dim in sampling functions.

	* sampling/stk_sampling_halton_rr2.m: Accept empty dim argument
	when box is provided, in which case dim is guessed from the
	dimension of box if provided, and defaults to one otherwise.
	* sampling/stk_sampling_maximinlhs.m: Idem.
	* sampling/stk_sampling_olhs.m: Idem.
	* sampling/stk_sampling_randomlhs.m: Idem.
	* sampling/stk_sampling_randunif.m: Idem.
	* sampling/stk_sampling_regulargrid.m: Idem.

	Use @stk_hrect objects wherever it is useful (work in progress).

	* examples/01_kriging_basics/stk_example_kb03.m: Use @stk_hrect.
	* examples/02_design_of_experiments/stk_example_doe03.m: Use @stk_hrect.
	* misc/test/stk_is_lhs.m: Use @stk_hrect.
	* paramestim/stk_param_init.m: Use @stk_hrect.
	* sampling/stk_sampling_halton_rr2.m: Use @stk_hrect.
	* sampling/stk_sampling_maximinlhs.m: Use @stk_hrect.
	* sampling/stk_sampling_olhs.m: Use @stk_hrect.
	* sampling/stk_sampling_randomlhs.m: Use @stk_hrect.
	* sampling/stk_sampling_randunif.m: Use @stk_hrect.
	* sampling/stk_sampling_regulargrid.m: Use @stk_hrect.

	A few additional methods for the @stk_dataframe class.

	* arrays/@stk_dataframe/diff.m: Overload base function.
	* arrays/@stk_dataframe/ismember.m: Overload base function.
	* arrays/@stk_dataframe/xlim.m: Overload base function.
	* arrays/@stk_dataframe/ylim.m: Overload base function.

	Overhaul stk_normalize and stk_rescale functions.

	* arrays/@stk_dataframe/stk_normalize.m: Overhaul.
	* arrays/@stk_dataframe/stk_rescale.m: Overhaul.
	* arrays/@stk_factorialdesign/stk_normalize.m: Overhaul.
	* arrays/@stk_factorialdesign/stk_rescale.m: Overhaul.
	* arrays/generic/stk_normalize.m: Overhaul.
	* arrays/generic/stk_rescale.m: Overhaul.

	stk_boundingbox.m: New function to create bounding boxes.

	* arrays/generic/stk_boundingbox.m: New function to create
	bounding boxes as @stk_hrect object.
	* admin/octpkg/INDEX: Add new functions to the index.
